<resources>
    <string name="app_name">Yudemy</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."
    </string>
    <string name="play_preview_video">play preview video</string>
    <string name="preview_this_course">Preview this course</string>
    <string name="buy_now">MoMo</string>
    <string name="show_more">Show more</string>
    <string name="description">Description</string>
    <string name="view_profile">View profile</string>
    <string name="_4_star">4 star</string>
    <string name="_5_star">5 star</string>
    <string name="_3_star">3 star</string>
    <string name="_2_star">2 star</string>
    <string name="_1_star">1 star</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_feedback">Search for feedback</string>
    <string name="student_feedback">Student feedback</string>
    <string name="course_dashboard">Course dashboard</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="live">LIVE</string>
    <string name="total_earning">Total revenue</string>
    <string name="date_range">Date range:</string>
    <string name="total_revenue">Total revenue</string>
    <string name="my_learning">My learning</string>
    <string name="progress_complete">%d%% complete</string>
    <string name="completed">Completed</string>
    <string name="start_course">Start course</string>
    <string name="search">Search</string>
    <string name="select_filter">Select filter</string>
    <string name="ask_a_question">Ask a question</string>
    <string-array name="my_learning_filter">
        <item>Favorite courses</item>
        <item>All courses</item>
    </string-array>
    <string-array name="lectures_filter">
        <item>All lectures</item>
        <item>Current lecture</item>
    </string-array>
    <string-array name="sort_most_recent_filter">
        <item>Sort by most recent</item>
    </string-array>
    <string-array name="questions_filter">
        <item>All questions</item>
        <item>Question I asked</item>
        <item>Question without responses</item>
    </string-array>
    <string-array name="instructor_questions_filter">
        <item>All questions</item>
        <item>Questions without responses</item>
        <item>Questions without instructors\' responses</item>
    </string-array>
    <string name="learning_section_title">Section %d - %s</string>
    <string name="learning_lecture_detail">Video - %s min</string>
    <string name="about_this_course">About this course</string>
    <string name="course_certificate">Course certificate</string>
    <string name="q_a">Q&amp;A</string>
    <string name="add_course_to_favorites">Add course to favorites</string>
    <string name="switch_to_instructor_view">Switch to instructor view</string>
    <string name="become_an_instructor">Become an instructor</string>
    <string name="account_settings">Account settings</string>
    <string name="learning_reminders">Learning reminders</string>
    <string name="account_security">Account security</string>
    <string name="close_account">Close account</string>
    <string name="support">Support</string>
    <string name="about_yudemy">About Yudemy</string>
    <string name="sign_out">Sign out</string>
    <string name="Yudemy_v1.0">Yudemy v1.0</string>
    <string name="learning_reminder_description">Learning a little each day adds up. Research shows that students who make learning a habit are more
        likely to retain information and reach their goals
    </string>
    <string name="learning_reminder_description1">Choose which day(s) you want to get a reminder</string>
    <string name="learning_reminder_description2">Choose what time you want to learn</string>
    <string name="learning_reminder_description3">Update or pause your reminders at any time</string>
    <string name="allow_reminders">Allow reminders</string>
    <string name="frequency">Frequency</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string-array name="frequency_day">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="frequency_time">
        <item>Morning</item>
        <item>Mid-morning</item>
        <item>Noon</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
    <string-array name="frequency_time_detail">
        <item>06:00</item>
        <item>09:00</item>
        <item>12:00</item>
        <item>15:00</item>
        <item>18:00</item>
        <item>21:00</item>
    </string-array>
    <string name="done">Done</string>
    <string name="account_security_description">Edit your account settings and change your password here.</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="retype_new_password">Re-type new password</string>
    <string name="change_password">Change password</string>
    <string name="close_your_account_permanently">Close your account permanently</string>
    <string name="close_account_warning">Warning: If you close your account, you will be unsubscribe from all your courses, and will lose access
        forever.
    </string>
    <string name="about_yudemy_description">Yudemy is an online learning platform featuring 100+ video courses taught by expert instructors. Take
        courses in anything from programming languages like Python, and Java to personal development classes like design, drawing, writing and yoga.
        Join the more than 30 million students who are mastering new skills, advancing their careers, and exploring new hobbies on Udemy.
    </string>
    <string name="NTVT">Team NTVT:</string>
    <string name="course_subtitle">Course subtitle</string>
    <string name="create_course">Create course</string>
    <string name="course_title">Course title</string>
    <string name="insert_your_course_title">Insert your course title</string>
    <string name="course_description">Course description</string>
    <string name="insert_your_course_description">Insert your course description</string>
    <string name="course_title_note">Your title should be a mix of attention-grabbing, informative, and optimized for search</string>
    <string name="course_description_note">Description should have minimum 200 words</string>
    <string name="basic_info">Basic info</string>
    <string name="course_image">Course image</string>
    <string name="upload_file">Upload file</string>
    <string name="course_image_note">Upload your course image here. Important guidelines: 750x422 pixels; .jpg, .jpeg,. gif, or .png. no text on the
        image
    </string>
    <string name="promotional_video">Promotional video</string>
    <string name="course_promo_video_note">Your promo video is a quick and compelling way for students to preview what they’ll learn in your course.
        Students considering your course are more likely to enroll if your promo video is well-made
    </string>
    <string name="create_content">Create content</string>
    <string name="curriculum">Curriculum</string>
    <string name="curriculum_description">Start putting together your course by creating sections and lectures</string>
    <string name="section_idx">Section %d:</string>
    <string name="lecture_idx">Lecture %d:</string>
    <string name="Replace">Replace</string>
    <string name="video_duration">%d:%d</string>
    <string name="lecture">Lecture</string>
    <string name="section">Section</string>
    <string name="enter_a_title">Enter a title</string>
    <string name="course_detail">Course detail</string>
    <string name="save">Save</string>
    <string name="course_landing_page">Course landing page</string>
    <string name="pricing">Pricing</string>
    <string name="set_a_price_for_your_course">Set a price for your course</string>
    <string name="leave_a_rating">Leave a rating</string>
    <string name="close_your_account">Close your account?</string>
    <string name="close_account_confirm_mess">Are you sure you want to close your account?</string>
    <string name="enter_your_password">Enter your password</string>
</resources>