<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LearningRemindersFragment" >

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_lock_idle_alarm"
        android:drawablePadding="6dp"
        android:drawableTint="@color/gray_300"
        android:text="@string/learning_reminder_description2"
        android:textColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_calendar"
        android:drawablePadding="6dp"
        android:drawableTint="@color/gray_300"
        android:text="@string/learning_reminder_description1"
        android:textColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/learning_reminders"
        android:textAlignment="center"
        android:textAppearance="@style/TitleFragment"
        app:layout_constraintBottom_toBottomOf="@+id/backFromReminders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backFromReminders"
        app:layout_constraintTop_toTopOf="@+id/backFromReminders" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/learning_reminder_description"
        android:textColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/backFromReminders"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_settings"
        android:drawablePadding="6dp"
        android:drawableTint="@color/gray_300"
        android:text="@string/learning_reminder_description3"
        android:textColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchAllow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/allow_reminders"
        android:textColor="@color/primary_text_color"
        android:theme="@style/MySwitch"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/backFromReminders"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        app:icon="@drawable/baseline_arrow_back_ios_new_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/primary_text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/frequencyNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:text="@string/frequency"
        app:layout_constraintEnd_toEndOf="@+id/switchAllow"
        app:layout_constraintStart_toStartOf="@+id/switchAllow"
        app:layout_constraintTop_toBottomOf="@+id/switchAllow" />

</androidx.constraintlayout.widget.ConstraintLayout>
