<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moreLearningLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreLearningFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/navAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_more_hor"
                android:drawablePadding="12dp"
                android:drawableTint="@color/primary_text_color"
                android:text="@string/about_this_course" />

            <TextView
                android:id="@+id/certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_certificate"
                android:drawablePadding="12dp"
                android:drawableTint="@color/primary_text_color"
                android:text="@string/course_certificate" />

            <TextView
                android:id="@+id/qa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_questionaire"
                android:drawablePadding="12dp"
                android:drawableTint="@color/primary_text_color"
                android:text="@string/q_a" />

            <TextView
                android:id="@+id/addToFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/ic_star"
                android:drawablePadding="12dp"
                android:drawableTint="@color/primary_text_color"
                android:text="@string/add_course_to_favorites" />
            <TextView
                android:id="@+id/tv_leaveRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_edit_16"
                android:drawablePadding="12dp"
                android:drawableTint="@color/primary_text_color"
                android:text="@string/leave_a_rating" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>