<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountSecurityFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/retype_new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_250"
        app:layout_constraintEnd_toEndOf="@+id/etCurrPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCurrPassword"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputRetype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/etRetypePassword"
            app:layout_constraintEnd_toEndOf="@+id/etRetypePassword"
            app:layout_constraintStart_toStartOf="@+id/etRetypePassword"
            app:layout_constraintTop_toTopOf="@+id/etRetypePassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_250"
        app:layout_constraintEnd_toEndOf="@+id/etCurrPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etCurrPassword"
        app:layout_constraintTop_toBottomOf="@+id/etCurrPassword"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/etNewPassword"
            app:layout_constraintEnd_toEndOf="@+id/etNewPassword"
            app:layout_constraintStart_toStartOf="@+id/etNewPassword"
            app:layout_constraintTop_toTopOf="@+id/etNewPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/account_security"
        android:textAlignment="center"
        android:textAppearance="@style/TitleFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/doneAccSecurity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/account_security_description"
        android:textAlignment="center"
        android:textColor="@color/gray_300"
        app:layout_constraintEnd_toEndOf="@+id/textView37"
        app:layout_constraintStart_toStartOf="@+id/doneAccSecurity"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView37"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etCurrPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_current_password"
        android:inputType="textPassword"
        android:textColorHint="@color/gray_250"
        app:layout_constraintEnd_toEndOf="@+id/etEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView26"
        app:layout_constraintTop_toBottomOf="@+id/textView26"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputCurr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/etCurrPassword"
            app:layout_constraintEnd_toEndOf="@+id/etCurrPassword"
            app:layout_constraintStart_toStartOf="@+id/etCurrPassword"
            app:layout_constraintTop_toTopOf="@+id/etCurrPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnChangePw"
        style="@style/MyBlackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/change_password"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/etRetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/etRetypePassword" />
</androidx.constraintlayout.widget.ConstraintLayout>