<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <Button
      android:id="@+id/closeAccConfirmBtn"
      style="@style/MyBlackButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginBottom="32dp"
      android:text="@string/close_account"
      android:textAllCaps="false"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/tlConfirmPwCloseAcc"
      app:layout_constraintTop_toBottomOf="@+id/tlConfirmPwCloseAcc" />

  <Button
      android:id="@+id/cancelCloseAccConfirmBtn"
      style="@style/MaterialAlertDialog.Button.Negative"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="24dp"
      android:background="@color/gray_100"
      android:backgroundTint="@color/gray_100"
      android:text="@string/cancel"
      android:textAllCaps="false"
      android:textColor="@color/primary_text_color"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/closeAccConfirmBtn"
      app:layout_constraintEnd_toStartOf="@+id/closeAccConfirmBtn"
      app:layout_constraintTop_toTopOf="@+id/closeAccConfirmBtn"
      app:layout_constraintVertical_bias="1.0" />

  <TextView
      android:id="@+id/courseListTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:text="@string/close_your_account"
      android:textAppearance="@style/TitleFragment"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView41"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/close_account_confirm_mess"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="@+id/courseListTitle"
      app:layout_constraintStart_toStartOf="@+id/courseListTitle"
      app:layout_constraintTop_toBottomOf="@+id/courseListTitle" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/tlConfirmPwCloseAcc"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/enter_your_password"
      android:inputType="textPassword"
      android:textColorHint="@color/gray_250"
      app:layout_constraintEnd_toEndOf="@+id/courseListTitle"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/courseListTitle"
      app:layout_constraintTop_toBottomOf="@+id/textView41"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etConfirmPwCloseAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tlConfirmPwCloseAcc"
        app:layout_constraintEnd_toEndOf="@+id/tlConfirmPwCloseAcc"
        app:layout_constraintStart_toStartOf="@+id/tlConfirmPwCloseAcc"
        app:layout_constraintTop_toTopOf="@+id/tlConfirmPwCloseAcc" />

  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>